--- a/development/index.html
+++ b/development/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-  </head>
+  <link rel="stylesheet" href="/src.7ed060e2.css"></head>
   <body>
     <h1>My Blog</h1>
 
